<resources>
    <string name="app_name">XDCPay</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_xdc_pay">Welcome to XDC Pay</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <string name="manage_digital_assets">Manage your digital assets</string>
    <string name="wallet_setup">Wallet Setup</string>
    <string name="import_existing_or_create_new_one">Import existing or create new one</string>
    <string name="import_using_secret_recovery_phrase">Import using secret recovery phrase</string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="secret_recovery_phrase">Secret Recovery Phrase</string>
    <string name="secret_phrase_hint_text">Enter your secret twelve word phrase here to restore your vault.</string>
    <string name="show_seed_phrase">Show seed phrase</string>
    <string name="password">Password</string>
    <string name="new_pass_hint">New Password (min 8 chars)</string>
    <string name="show">Show</string>
    <string name="password_strength">Password strength</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="import_text">Import</string>
    <string name="imported_text">Imported</string>
    <string name="this_password_will_unlock_your_wallet">This password will unlock your wallet</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters</string>
    <string name="sign_in_with_biometric">Sign in with Biometric?</string>
    <string name="i_understand_that_xdc_pay_cannot_recover_this_password_for_me">I understand that XDC Pay cannot recover this password for me</string>
    <string name="create_password">Create password</string>
    <string name="key_warning">Do not share your private key with anyone. Anyone with your private key fully control your account</string>
    <string name="these_12_words_are_the_only_way_to_restore_your_xdcpay_accounts_save_them_somewhere_safe_and_secret">These 12 words are the only way to restore your XDCPay accounts. Save them somewhere safe and secret.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="write_down_these_12_words_down_or_copy_them_to_a_password_manager">Write down these 12 words down, or copy them to a password manager</string>
    <string name="continue_text">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_1">Account 1</string>
    <string name="account">Account</string>
    <string name="xdc_mainnet">XDC Mainnet</string>
    <string name="xdc_apothem_testnet">XDC Apothem Testnet</string>
    <string name="localhost_8545">Localhost 8545</string>
    <string name="_4550_xdc">4550 XDC</string>
    <string name="txt_usd">USD</string>
    <string name="txt_dollar">$</string>
    <string name="code">Xdc58a9…7cA4</string>
    <string name="buy">Buy</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="select_service">Select Service</string>
    <string name="select_network">Select Network</string>
    <string name="select_key_Type">Select Key Type</string>
    <string name="qr_code">QR code</string>
    <string name="send_from">Send From</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="wallet_address">Wallet address</string>
    <string name="amount">Amount</string>
    <string name="available_4550_xdc">Available: 4550 XDC</string>
    <string name="available_amount">Available Amount:</string>
    <string name="availableBalance">Available:  %s XDC</string>
    <string name="gas_price_gwei">Gas Price (GWEI)</string>
    <string name="max_transaction">Max Transaction Fee</string>
    <string name="total">Total</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="gas_limit_required">Gas limit required</string>
    <string name="gas_limit_must_be_greater_than_2100_and_less_than_415800000">Gas Limit must be greater than 2100 and less than 415800000</string>
    <string name="transaction_note_optional">Transaction Note (Optional)</string>
    <string name="next">Next</string>
    <string name="transactions">Transactions</string>
    <string name="nfts">NFTs</string>
    <string name="invalid_privatekey">Invalid Privatekey</string>
    <string name="transaction">Transaction</string>
    <string name="no_transactions">No transaction history</string>
    <string name="tokens">Tokens</string>
    <string name="_100_eurg">100 EURG</string>
    <string name="lts">LTS</string>
    <string name="add_token">Add Token</string>
    <string name="token_address">Token Address</string>
    <string name="token_contract_address">Token Contract Address</string>
    <string name="token_symbol">Token Symbol</string>
    <string name="like_xdc">Like ‘XDC’</string>
    <string name="decimals_of_precision">Decimals of Precision</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="error_password_empty">Password Required</string>
    <string name="error_password_not_match">Password does not match</string>
    <string name="error_check_terms">Please Agree , XDCPay Can’t Recover Your Password</string>
    <string name="error_empty">This field cannot be empty</string>
    <string name="network_name_error">Please enter network name</string>
    <string name="rpc_url_error">Please enter valid RPC URL</string>
    <string name="chain_id_error">Please enter Chain ID</string>
    <string name="import_from_seed">Import from seed</string>
    <string name="edit">Edit</string>
    <string name="view_on_observatory">View on Observatory</string>
    <string name="settings">Settings</string>
    <string name="info_help">Info/Help</string>
    <string name="logout">Logout</string>
    <string name="state_logs">State Logs</string>
    <string name="state_log_txt">State logs contain your public account addresses and sent transactions.</string>
    <string name="download_state_logs">Download State Logs</string>
    <string name="general_settings">General Settings</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="security_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="networks">Networks</string>
    <string name="add_networks">Add Network</string>
    <string name="txt_delete">Delete</string>
    <string name="network_name">Network name</string>
    <string name="apothem_network">XDC Apothem Network</string>
    <string name="rpc_url">RPC URL</string>
    <string name="chain_id">Chain ID</string>
    <string name="add_acc_name">Please add Account name</string>
    <string name="copied">Address Copied to clipboard</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="block_explore_url">Block Explorer Url</string>
    <string name="contacts">Contacts</string>
    <string name="secure_wallet">Secure Wallet</string>
    <string name="enter_password">Enter Password</string>
    <string name="biometric">Biometric</string>
    <string name="log_in">Log in</string>
    <string name="restore_from_seed_phrase">Restore from seed phrase</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="contacts_name">Username</string>
    <string name="reveal_seed_words">Reveal Seed Words</string>
    <string name="change_password">Change Password</string>
    <string name="auto_locker_timer">Auto-Lock Timer</string>
    <string name="auto_timer">Auto Lock Timer</string>
    <string name="show_private_key">Show Private Key</string>
    <string name="error_private_key">Private key not found</string>
    <string name="signin_biometric">Sign-in with biometrics</string>
    <string name="auto_lock_time">5 minutes</string>
    <string name="auto_lock_txt">Set the idle time in minutes before the wallet will be locked.</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="password_to_continue">Enter Password to continue</string>
    <string name="reveal">Reveal</string>
    <string name="secret_seed">Secret seed words</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_recover_phase">Confirm Recovery Phase</string>
    <string name="confirm">Confirm</string>
    <string name="confirmed">Confirmed</string>
    <string name="details">Details</string>
    <string name="transaction_log">Transaction Log</string>
    <string name="sent">Sent</string>
    <string name="transaction_created">Transaction created with a value of 100 XDC at 16:29 on 10/11/2021.</string>
    <string name="transaction_submitted">Transaction submitted with estimated gas fee of 1.00 GWEI at 16:29 on 10/11/2021.</string>
    <string name="transaction_confirmed">Transaction Confirmed at</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="security_privacy_settings">Security and Privacy Settings</string>
    <string name="secret_content">These 12 words are the only way to restore your XDCPay accounts. Save them somewhere safe and secret.</string>
    <string name="hint_private_key">Your private key</string>
    <string name="hint_rpc_url">New RPC Network</string>
    <string name="hint_currency_symbol">Symbol (Optional)</string>
    <string name="hint_block_explore_url">Block Explorer Url (Optional)</string>
    <string name="hint_wallet_address">Contact’s Wallet Address</string>
    <string name="hint_address">xdc084f58d39d6a0d5e89464….4594</string>
    <string name="hint_key">eg. ce4085d87dc63992e358f5c1a8bd4c4de647bb0cfdec034d00c3c9532535f324</string>
    <string name="hint_username">Contact’s Name</string>
    <string name="hint_XDC">0 XDC</string>
    <string name="reveal_seed_words_hint">Do not recover your seed words in a public place! These words can be used to steal all your accounts.</string>
    <string name="change_password_hint">Create your new password for XDC Pay so that you can login to your account.</string>
    <string name="private_key_hint">This is the private key for the current selected account. Never disclose this key.</string>
    <string name="password_strength_msg">Password must contain at least an uppercase letter, a number, at least one special character</string>
    <string name="password_length_msg">Password should have a minimum of 8 characters.</string>
    <string name="terms_service">Terms of Service</string>
    <string name="help_text">Dear <b>XDC</b>Pay Users,\n\n <b>XDC</b>Pay is a beta software.\n\nWhen you log in to <b>XDC</b>Pay, your current account’s address is visible to every new site you visit.This can be used to look up your account balances of XDC and other tokens.\n\nFor your privacy, for now, please sign out of XDC Pay when you’re done using a site.</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recipient_address_required">Recipient Address Required</string>
    <string name="sender_address_required">Sender Address Required</string>
    <string name="my_accounts">My Accounts</string>
    <string name="create_account">Create Account</string>
    <string name="import_account">Import Account</string>
    <string name="remove">Remove</string>
</resources>