<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.ImportWalletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_20">

            <com.app.xdcpay.Views.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secret_recovery_phrase"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rounded_corner_5dp_light_grey_border"
                android:gravity="top"
                android:hint="@string/secret_phrase_hint_text"
                android:lines="6"
                android:padding="@dimen/margin_10"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.Checkbox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:text="@string/show_seed_phrase"
                android:textColor="@color/colorGrey" />

            <com.app.xdcpay.Views.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/margin_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rounded_corner_5dp_light_grey_border">

                <com.app.xdcpay.Views.EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/show"
                    android:background="@android:color/transparent"
                    android:hint="@string/new_pass_hint"
                    android:padding="@dimen/margin_10"
                    android:singleLine="true"
                    android:textSize="@dimen/margin_14" />

                <com.app.xdcpay.Views.TextViewMedium
                    android:id="@+id/show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/margin_10"
                    android:text="@string/show"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/margin_14" />
            </RelativeLayout>

            <ProgressBar
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10" />

            <com.app.xdcpay.Views.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/password_strength"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/margin_10" />

            <com.app.xdcpay.Views.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/confirm_password"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rounded_corner_5dp_light_grey_border"
                android:hint="@string/confirm_password"
                android:padding="@dimen/margin_10"
                android:singleLine="true"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:id="@+id/import_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/rounded_corner_5dp_green_bg"
                android:gravity="center"
                android:padding="@dimen/margin_10"
                android:text="@string/import_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/margin_16" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>