<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/margin_20"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:src="@drawable/ic_logo" />

    <com.app.xdcpay.Views.TextViewMedium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:text="@string/secure_wallet"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/margin_16" />

    <com.app.xdcpay.Views.EditText
        android:id="@+id/password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_5dp_light_grey_border"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="@dimen/margin_10"
        android:singleLine="true"
        android:textSize="@dimen/margin_14" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20">

        <com.app.xdcpay.Views.TextViewMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/biometric"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/margin_14" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <com.app.xdcpay.Views.TextViewMedium
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/rounded_corner_5dp_green_bg"
        android:gravity="center"
        android:padding="@dimen/margin_10"
        android:text="@string/log_in"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/margin_16" />

    <com.app.xdcpay.Views.TextViewMedium
        android:id="@+id/import_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/rounded_corner_5dp_blue_border"
        android:gravity="center"
        android:padding="@dimen/margin_10"
        android:text="@string/create_new_wallet"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/margin_16" />

    <com.app.xdcpay.Views.TextView
        android:id="@+id/restore_from_seed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:padding="@dimen/margin_10"
        android:text="@string/restore_from_seed_phrase"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/margin_16" />
</LinearLayout>