<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".Fragments.NavDrawerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:id="@+id/account_rl"
        android:layout_marginTop="@dimen/margin_50">

        <ImageView
            android:id="@+id/profile_iv"
            android:layout_width="@dimen/margin_50"
            android:layout_height="@dimen/margin_50"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/profile_icon" />

        <com.app.xdcpay.Views.TextViewMedium
            android:id="@+id/accountname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/profile_iv"
            android:drawableRight="@drawable/ic_drop_down"
            android:drawablePadding="@dimen/margin_10"
            android:text="@string/account_1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/margin_16" />

        <com.app.xdcpay.Views.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editAccount"
            android:layout_below="@id/accountname"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_toRightOf="@id/profile_iv"
            android:text="@string/edit"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/margin_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGrey" />

    <com.app.xdcpay.Views.TextViewMedium
        android:id="@+id/view_on_observatory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_10"
        android:drawableLeft="@drawable/ic_view_on_observatory"
        android:drawablePadding="@dimen/margin_20"
        android:padding="@dimen/margin_15"
        android:text="@string/view_on_observatory"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/margin_16" />

    <com.app.xdcpay.Views.TextViewMedium
        android:id="@+id/tvtransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:drawableLeft="@drawable/ic_transaction"
        android:drawablePadding="@dimen/margin_20"
        android:padding="@dimen/margin_15"
        android:text="@string/transaction"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/margin_16" />

    <com.app.xdcpay.Views.TextViewMedium
        android:id="@+id/tvSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:drawableLeft="@drawable/ic_settings"
        android:drawablePadding="@dimen/margin_20"
        android:padding="@dimen/margin_15"
        android:text="@string/settings"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/margin_16" />

    <com.app.xdcpay.Views.TextViewMedium
        android:id="@+id/tvHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:drawableLeft="@drawable/ic_info"
        android:drawablePadding="@dimen/margin_20"
        android:padding="@dimen/margin_15"
        android:text="@string/info_help"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/margin_16" />

    <com.app.xdcpay.Views.TextViewMedium
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:drawableLeft="@drawable/ic_logout"
        android:drawablePadding="@dimen/margin_20"
        android:padding="@dimen/margin_15"
        android:text="@string/logout"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/margin_16" />
</LinearLayout>