<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Activities.Networks.NetworkDetailsActivity">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:weightSum="2"
                android:orientation="horizontal">

                <com.app.xdcpay.Views.TextViewMedium
                    android:id="@+id/tvXDCTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apothem_network"
                    android:textColor="@color/colorBlue"
                    android:layout_weight="1"
                    android:textSize="@dimen/margin_14" />

                <com.app.xdcpay.Views.TextViewMedium
                    android:id="@+id/tvRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/margin_14" />
            </LinearLayout>

            <com.app.xdcpay.Views.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/network_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:id="@+id/tvNetworkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rounded_corner_5dp_light_grey_border"
                android:backgroundTint="@color/bgTextColor"
                android:hint="@string/network_name"
                android:padding="@dimen/margin_10"
                android:singleLine="true"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/rpc_url"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:id="@+id/tvRPCUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rounded_corner_5dp_light_grey_border"
                android:backgroundTint="@color/bgTextColor"
                android:hint="@string/hint_rpc_url"
                android:padding="@dimen/margin_10"
                android:singleLine="true"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/chain_id"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:id="@+id/tvChainId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rounded_corner_5dp_light_grey_border"
                android:backgroundTint="@color/bgTextColor"
                android:hint="@string/chain_id"
                android:padding="@dimen/margin_10"
                android:singleLine="true"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/currency_symbol"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:id="@+id/tvCurrencySymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rounded_corner_5dp_light_grey_border"
                android:backgroundTint="@color/bgTextColor"
                android:hint="@string/hint_currency_symbol"
                android:padding="@dimen/margin_10"
                android:singleLine="true"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/block_explore_url"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/margin_14" />

            <com.app.xdcpay.Views.TextViewMedium
                android:id="@+id/tvBlockExplorer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rounded_corner_5dp_light_grey_border"
                android:backgroundTint="@color/bgTextColor"
                android:hint="@string/hint_block_explore_url"
                android:inputType="text"
                android:padding="@dimen/margin_10"
                android:singleLine="true"
                android:textSize="@dimen/margin_14" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>